--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-web": "0.17.1",
-    "react-redux": "^8.0.1"
+    "react-redux": "^8.0.1",
+    "tailwind-rn": "^4.2.0",
+    "twrnc": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
