--- a/package.json
+++ b/package.json
@@ -10,19 +10,32 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@ant-design/react-native": "^5.0.0",
+    "@expo/vector-icons": "^12.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-native-fontawesome": "^0.2.7",
     "@reduxjs/toolkit": "^1.8.1",
+    "@rneui/base": "^4.0.0-rc.2",
+    "@rneui/themed": "^4.0.0-rc.2",
+    "antd": "^4.20.2",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-elements": "^3.4.2",
+    "react-native-safe-area-context": "^4.2.5",
+    "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
     "react-redux": "^8.0.1",
     "tailwind-rn": "^4.2.0",
     "twrnc": "^3.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.17.10",
+    "reactotron-react-js": "^3.3.7"
   },
   "private": true
 }
